<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.riki.myplaces.ViewMyPlaceActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_name_label"/>

    <TextView
        android:id="@+id/viewmyplace_name_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_desc_label"/>

    <TextView
        android:id="@+id/viewmyplace_desc_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_lon_label"/>

    <TextView
        android:id="@+id/viewmyplace_lon_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_lat_label"/>

    <TextView
        android:id="@+id/viewmyplace_lat_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/viewmyplace_finished_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewmyplace_finished_label"/>

</LinearLayout>
