<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="com.example.riki.myplaces.EditMyPlaceActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_name_label"/>

    <EditText
        android:id="@+id/editmyplace_name_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_desc_label"/>

    <EditText
        android:id="@+id/editmyplace_desc_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/editmyplace_finished_button"
            android:layout_weight="1"
            android:text="@string/editmyplace_save_label"
            />
        <Button
            android:id="@+id/editmyplace_cancel_button"
            android:layout_weight="1"
            android:text="@string/editmyplace_cancel_label"
            />
    </TableRow>
</LinearLayout>
